--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-.sass-cache/4241ef52db2255a56ca4f15b084fd4381ad1dd90/style.scssc
-.sass-cache/4241ef52db2255a56ca4f15b084fd4381ad1dd90/style.scssc
+.sass-cache/
