--- a/projects.json
+++ b/projects.json
@@ -3,30 +3,35 @@
     "name":"Neko Fishing",
     "desc": "2D Android game made in Unreal 4",
     "if": false,
+    "modal": "nekofishing",
     "year": "in progress"
   },
   {
     "name":"WATEats",
     "desc": "Restaurant decision maker BlackBerry App",
-    "if": false,
+    "if": true,
+    "modal": "wateats",
     "year": 2016
   },
   {
     "name":"Upscale Markets",
     "desc": "Online grocery store web app made with Google's Angular Material",
-    "if": false,
+    "if": true,
+    "modal": "upscale",
     "year": 2016
   },  
   {
     "name":"Squidpia",
     "desc": "2D Squid HTML5 mini-game",
-    "if": false,
+    "if": true,
+    "modal":"squidpia",
     "year": 2015
   },  
   {
     "name":"waterloc",
     "desc": "UW building finder web app",
-    "if": false,
+    "if": true,
+    "modal": "waterloc",
     "year": 2015
   }
 ]
